add vercel deploy workflow

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ SMTP_PORT="587"
 SMTP_USER="your_gmail@gmail.com"
 SMTP_PASS="your_gmail_app_password"
 EMAIL_FROM="FitPulse <your_gmail@gmail.com>"
+STRIPE_SECRET_KEY="sk_test_..."
+STRIPE_PRICE_ID_PRO="price_..."
+STRIPE_PRICE_ID_PROPLUS="price_..."
+STRIPE_SUCCESS_URL="http://localhost:3000/dashboard?checkout=success"
+STRIPE_CANCEL_URL="http://localhost:3000/pricing?checkout=cancel"
