--- a/package.json
+++ b/package.json
@@ -10,27 +10,26 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
+    "@eslint/eslintrc": "^3.3.3",
     "@prisma/client": "^5.22.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/node": "^20.10.5",
+    "@types/nodemailer": "^7.0.9",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.16",
     "bcryptjs": "^2.4.3",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.6",
     "lucide-react": "^0.294.0",
     "next": "^16.1.6",
     "next-auth": "^5.0.0-beta.30",
     "nodemailer": "^7.0.13",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "stripe": "^14.25.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3.3.3",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^9.39.2",
-    "eslint-config-next": "^16.1.6",
     "postcss": "^8.4.32",
     "prisma": "^5.22.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "stripe": "^14.25.0",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
   }
