remove prisma/next-auth legacy stack and finalize supabase auth flow

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,6 @@
-DATABASE_URL="postgresql://postgres:YOUR_PASSWORD@db.uhldlcrfncbnnhwmeaje.supabase.co:5432/postgres"
-NEXTAUTH_SECRET="replace-with-strong-secret"
-NEXTAUTH_URL="http://localhost:3000"
-SMTP_HOST="smtp.gmail.com"
-SMTP_PORT="587"
-SMTP_USER="your_gmail@gmail.com"
-SMTP_PASS="your_gmail_app_password"
-EMAIL_FROM="FitPulse <your_gmail@gmail.com>"
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
+NEXT_PUBLIC_SUPABASE_URL="https://YOUR_PROJECT_REF.supabase.co"
+NEXT_PUBLIC_SUPABASE_ANON_KEY="YOUR_SUPABASE_ANON_KEY"
 STRIPE_SECRET_KEY="sk_test_..."
 STRIPE_PRICE_ID_PRO="price_..."
 STRIPE_PRICE_ID_PROPLUS="price_..."
