--- a/package.json
+++ b/package.json
@@ -4,30 +4,23 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma migrate deploy && prisma generate && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint -c node_modules/eslint-config-next/dist/core-web-vitals.js . --ext .ts,.tsx",
-    "postinstall": "prisma generate"
+    "postinstall": "echo \"postinstall complete\""
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.7.2",
     "@eslint/eslintrc": "^3.3.3",
-    "@prisma/client": "^5.22.0",
-    "@types/bcryptjs": "^2.4.2",
+    "@supabase/supabase-js": "^2.95.3",
     "@types/node": "^20.10.5",
-    "@types/nodemailer": "^7.0.9",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
-    "bcryptjs": "^2.4.3",
     "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.6",
     "lucide-react": "^0.294.0",
     "next": "^16.1.6",
-    "next-auth": "^5.0.0-beta.30",
-    "nodemailer": "^7.0.13",
     "postcss": "^8.4.32",
-    "prisma": "^5.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "stripe": "^14.25.0",
