feat: add lifecycle email automation (J+1, J+7, trial ending) via SMTP

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 NEXT_PUBLIC_SUPABASE_URL="https://YOUR_PROJECT_REF.supabase.co"
 NEXT_PUBLIC_SUPABASE_ANON_KEY="YOUR_SUPABASE_ANON_KEY"
+ENABLE_LIFECYCLE_EMAILS="false"
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT="587"
+SMTP_USER="your-email@gmail.com"
+SMTP_PASS="your-app-password"
+EMAIL_FROM="FitPulse <your-email@gmail.com>"
 STRIPE_SECRET_KEY="sk_test_..."
 STRIPE_PRICE_ID_PRO="price_..."
 STRIPE_PRICE_ID_PROPLUS="price_..."
