--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "eslint-config-next": "^16.1.6",
     "lucide-react": "^0.294.0",
     "next": "^16.1.6",
+    "nodemailer": "^8.0.1",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "stripe": "^14.25.0",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^7.0.9"
   }
 }
