--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ ENABLE_LIFECYCLE_EMAILS="false"
 ENABLE_REMINDER_EMAILS="false"
 ENABLE_SERVER_CRON_EMAILS="false"
 NEXT_PUBLIC_ENABLE_CLIENT_EMAIL_AUTOMATION="false"
+NEXT_PUBLIC_ENABLE_WEB_NOTIFICATIONS="false"
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT="587"
 SMTP_USER="your-email@gmail.com"
