chore: complete env example for Supabase + optional billing

--- a/.env.example
+++ b/.env.example
@@ -2,17 +2,21 @@ NEXT_PUBLIC_APP_URL="http://localhost:3000"
 NEXT_PUBLIC_SUPABASE_URL="https://YOUR_PROJECT_REF.supabase.co"
 NEXT_PUBLIC_SUPABASE_ANON_KEY="YOUR_SUPABASE_ANON_KEY"
 SUPABASE_SERVICE_ROLE_KEY="YOUR_SUPABASE_SERVICE_ROLE_KEY"
+DATABASE_URL="postgresql://USER:PASSWORD@HOST:6543/postgres?pgbouncer=true&connection_limit=1&sslmode=require"
+DIRECT_URL="postgresql://USER:PASSWORD@HOST:5432/postgres?sslmode=require"
 CRON_SECRET="CHANGE_ME"
 ENABLE_LIFECYCLE_EMAILS="false"
 ENABLE_REMINDER_EMAILS="false"
 ENABLE_SERVER_CRON_EMAILS="false"
 NEXT_PUBLIC_ENABLE_CLIENT_EMAIL_AUTOMATION="false"
 NEXT_PUBLIC_ENABLE_WEB_NOTIFICATIONS="false"
+NEXT_PUBLIC_ENABLE_BILLING="false"
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT="587"
 SMTP_USER="your-email@gmail.com"
 SMTP_PASS="your-app-password"
 EMAIL_FROM="FitPulse <your-email@gmail.com>"
+# Optional (only if billing enabled)
 STRIPE_SECRET_KEY="sk_test_..."
 STRIPE_PRICE_ID_PRO="price_..."
 STRIPE_PRICE_ID_PROPLUS="price_..."
