feat: add full mobile app foundation with PWA and Capacitor (iOS/Android)

--- a/package.json
+++ b/package.json
@@ -12,9 +12,18 @@
     "test:e2e:auth-real": "playwright test e2e/auth-real.spec.ts",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
+    "mobile:sync": "npx cap sync",
+    "mobile:add:ios": "npx cap add ios",
+    "mobile:add:android": "npx cap add android",
+    "mobile:ios": "npx cap open ios",
+    "mobile:android": "npx cap open android",
     "postinstall": "echo \"postinstall complete\""
   },
   "dependencies": {
+    "@capacitor/android": "^8.1.0",
+    "@capacitor/cli": "^8.1.0",
+    "@capacitor/core": "^8.1.0",
+    "@capacitor/ios": "^8.1.0",
     "@eslint/eslintrc": "^3.3.3",
     "@supabase/supabase-js": "^2.95.3",
     "@types/node": "^20.10.5",
@@ -25,6 +34,7 @@
     "eslint-config-next": "^16.1.6",
     "lucide-react": "^0.294.0",
     "next": "^16.1.6",
+    "next-pwa": "^5.6.0",
     "nodemailer": "^8.0.1",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
