--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint -c node_modules/eslint-config-next/dist/core-web-vitals.js . --ext .ts,.tsx --ignore-pattern \"android/**\" --ignore-pattern \"ios/**\" --ignore-pattern \".next/**\" --rule 'react-hooks/set-state-in-effect: off'",
+    "lint": "eslint -c node_modules/eslint-config-next/dist/core-web-vitals.js . --ext .ts,.tsx --ignore-pattern \"android/**\" --ignore-pattern \"ios/**\" --ignore-pattern \".next/**\" --ignore-pattern \"test-results/**\" --ignore-pattern \"playwright-report/**\" --rule 'react-hooks/set-state-in-effect: off'",
     "test:e2e": "playwright test",
     "test:e2e:standard": "playwright test e2e/public-pages.spec.ts e2e/workout-flow.spec.ts e2e/workout-recovery.spec.ts",
     "test:e2e:auth-real": "playwright test e2e/auth-real.spec.ts",
