test: add mobile smoke coverage and harden csp/playwright stability

--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint -c node_modules/eslint-config-next/dist/core-web-vitals.js . --ext .ts,.tsx --ignore-pattern \"android/**\" --ignore-pattern \"ios/**\" --ignore-pattern \".next/**\" --ignore-pattern \"test-results/**\" --ignore-pattern \"playwright-report/**\" --rule 'react-hooks/set-state-in-effect: off'",
-    "test:e2e": "playwright test",
-    "test:e2e:standard": "playwright test e2e/public-pages.spec.ts e2e/workout-flow.spec.ts e2e/workout-recovery.spec.ts",
-    "test:e2e:auth-real": "playwright test e2e/auth-real.spec.ts",
-    "test:e2e:ui": "playwright test --ui",
-    "test:e2e:headed": "playwright test --headed",
+    "test:e2e": "FORCE_COLOR=0 NO_COLOR=1 playwright test",
+    "test:e2e:standard": "FORCE_COLOR=0 NO_COLOR=1 playwright test e2e/public-pages.spec.ts e2e/workout-flow.spec.ts e2e/workout-recovery.spec.ts",
+    "test:e2e:auth-real": "FORCE_COLOR=0 NO_COLOR=1 playwright test e2e/auth-real.spec.ts",
+    "test:e2e:ui": "FORCE_COLOR=0 NO_COLOR=1 playwright test --ui",
+    "test:e2e:headed": "FORCE_COLOR=0 NO_COLOR=1 playwright test --headed",
     "mobile:sync": "npx cap sync",
     "mobile:add:ios": "npx cap add ios",
     "mobile:add:android": "npx cap add android",
